update misc configs

--- a/dot_config/lazygit/config.yml
+++ b/dot_config/lazygit/config.yml
@@ -1,2 +1,7 @@
 git:
   autoForwardBranches: none
+  localBranchSortOrder: recency
+  remoteBranchSortOrder: alphabetical
+
+gui:
+  useHunkModeInStagingView: false
