--- a/dot_config/ranger/rc.conf
+++ b/dot_config/ranger/rc.conf
@@ -280,7 +280,7 @@ set clear_filters_on_dir_change false
 
 # Disable displaying line numbers in main column.
 # Possible values: false, absolute, relative.
-set line_numbers relative
+set line_numbers absolute
 
 # When line_numbers=relative show the absolute line number in the
 # current line.
@@ -758,7 +758,7 @@ tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
-# Personal keybinds
+# NOTE: Personal keybinds
 # This binds Ctrl+c to change directories via fzf
-map <C-f> fzf_select
+map F fzf_select
 map <C-g> fzf_locate
