--- a/.chezmoiexternal.yml
+++ b/.chezmoiexternal.yml
@@ -1,3 +1,6 @@
 "./.config/zathura/zathura-solarized":
   type: "git-repo"
   url: "https://github.com/lennonwoo/zathura-solarized"
+"./.config/nvim":
+  type: "git-repo"
+  url: "https://github.com/SuchWowEl/nvim_conf"
