fix: add/override some values for true color on wezterm using wsl

--- a/dot_config/tmux/theme.conf
+++ b/dot_config/tmux/theme.conf
@@ -20,10 +20,11 @@ set -g pane-active-border-style 'fg=cyan'
 # set -g status-position bottom
 set -g status-justify left
 set -g status-left "#{?client_prefix,#[fg=cyan]#[bg=#262335],#[fg=red]#[bg=#262335]} #H %% [#S] #[default]"
-# set -g status-left-length 15
+set -g status-left-length 25
 set -g status-right-style 'fg=magenta'
 set -g status-right '%b %-d %Y | %-I:%M %p '
 set -g status-right-length 50
+set -g status-style 'bg=black'
 # setw -g window-status-current-style 'fg=black bg=red'
 setw -g window-status-current-style 'fg=green bg=#262335'
 # setw -g window-status-current-style 'fg=#ff7edb' # lowercased the color since it wouldnt work if uppercased
