feat: use vicinae as launcher

--- a/dot_config/hypr/keybinds.conf
+++ b/dot_config/hypr/keybinds.conf
@@ -1,7 +1,8 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 $terminal = kitty
-$menu = wofi --show=drun
+$closeMenu = vicinae vicinae://close
+$menu = vicinae toggle
 $fileManager = nemo
 $scriptsDir = ~/.config/hypr/scripts/
 
@@ -13,17 +14,17 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 # bind = $mainMod, R, exec, $menu
-bind = $mainMod, R, exec, killall wofi || $menu
+bind = $mainMod, R, exec, $closeMenu || $menu
 bind = $mainMod, F, fullscreen, 1
 # bind = $mainMod SHIFT, F, fullscreen, 0
 bind = $mainMod ALT, F, fullscreenstate, 2 # doesnt work on chromium
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, N, togglesplit, # dwindle
 bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # animations ON/OFF
-bind = $mainMod, period, exec, killall rofimoji || rofimoji -a type 
+bind = $mainMod, period, exec, $closeMenu || vicinae vicinae://extensions/vicinae/vicinae/search-emojis
 bind = $mainMod CTRL SHIFT, L, exec, hyprlock # Lock the screen
 bind = $mainMod, F12, exec, kalk
-bind = $mainMod, W, exec, zen-browser --ProfileManager 
+bind = $mainMod, W, exec, zen-browser --ProfileManager
 bind = $mainMod, B, exec, blueman-manager
 # bind = $mainMod SHIFT, H, exec, hyprpanel -t settings-dialog
 
@@ -153,7 +154,7 @@ binde = $mainMod SHIFT, up, resizeactive,0 -50
 binde = $mainMod SHIFT, down, resizeactive,0 50
 
 # wofi cliphist
-bind = $mainMod CTRL, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod CTRL, V, exec, $closeMenu || vicinae vicinae://extensions/vicinae/clipboard/history
 
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 && notify-send -e -h string:x-canonical-private-synchronous:mY_N0tiF -a "changeVolume" -u low -i audio-volume-high -h int:value:"$(pamixer --get-volume)" "Volume: $(pamixer --get-volume)%"
