--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -27,3 +27,10 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+
+# blur
+layerrule = blur,vicinae
+layerrule = ignorealpha 0, vicinae
+
+# disable fade animation for vicinae only
+layerrule = noanim, vicinae
