--- a/dot_config/hypr/startup.conf
+++ b/dot_config/hypr/startup.conf
@@ -15,6 +15,7 @@ exec-once = poweralertd
 exec-once = dunst
 exec-once = nm-applet --indicator & disown
 exec-once = kwalletd6
+exec-once = vicinae server
 
 # personal modifications
 # exec-once=webcord
