feat: switch to vague theme

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -5,7 +5,7 @@
 # include current-theme.conf
 # include flow.conf
 # cyberpunk neon
-include silkcircuit.conf
+include vague.conf
 # include no-preference-theme.auto.conf
 # END_KITTY_THEME
 
