--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -57,7 +57,7 @@ general {
     gaps_out = 20
     border_size = 2
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border=rgb(e135ff)
+    col.active_border=rgb(d8647e)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
