refactor: modify external monitors' brightness as well

--- a/dot_config/hypr/keybinds.conf
+++ b/dot_config/hypr/keybinds.conf
@@ -167,8 +167,8 @@ bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
 # brightness
-bind = ,XF86MonBrightnessDown, exec, brightnessctl set 5%- && dunstify -h string:x-canonical-private-synchronous:mY_N0tiF -a "changeBrightness" -u low -i preferences-system-brightness-lock -h int:value:"$(brightnessctl -m | awk -F, '{print substr($4, 0, length($4)-1)}')" "Brightness: $(brightnessctl -m | awk -F, '{print substr($4, 0, length($4)-1)}')%"
-bind = ,XF86MonBrightnessUp, exec, brightnessctl set 5%+ && dunstify -h string:x-canonical-private-synchronous:mY_N0tiF -a "changeBrightness" -u low -i preferences-system-brightness-lock -h int:value:"$(brightnessctl -m | awk -F, '{print substr($4, 0, length($4)-1)}')" "Brightness: $(brightnessctl -m | awk -F, '{print substr($4, 0, length($4)-1)}')%"
+bind = ,XF86MonBrightnessDown, exec, $scriptsDir/brightness-control.sh --dec
+bind = ,XF86MonBrightnessUp, exec, $scriptsDir/brightness-control.sh --inc
 
 bind = ,XF86AudioMicMute, exec, dunstify -h string:x-canonical-private-synchronous:m1c "Mic is $([[ $(pamixer --default-source --get-mute) == 'true' ]] && echo 'off' || echo 'on')"
 
