--- a/dot_config/ranger/rc.conf
+++ b/dot_config/ranger/rc.conf
@@ -762,3 +762,6 @@ copytmap <ESC> q Q w <C-c>
 # This binds Ctrl+c to change directories via fzf
 map F fzf_select
 map <C-g> fzf_locate
+
+# must remain true for image previews to work
+set use_preview_script true
