chore(hypr): misc changes

--- a/dot_config/hypr/keybinds.conf
+++ b/dot_config/hypr/keybinds.conf
@@ -159,7 +159,7 @@ bind = $mainMod CTRL, V, exec, $closeMenu || vicinae vicinae://extensions/vicina
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 && notify-send -e -h string:x-canonical-private-synchronous:mY_N0tiF -a "changeVolume" -u low -i audio-volume-high -h int:value:"$(pamixer --get-volume)" "Volume: $(pamixer --get-volume)%"
 binde = , XF86AudioLowerVolume, exec, pamixer -d 5 && notify-send -e -h string:x-canonical-private-synchronous:mY_N0tiF -a "changeVolume" -u low -i audio-volume-high -h int:value:"$(pamixer --get-volume)" "Volume: $(pamixer --get-volume)%"
-bind = , XF86AudioMicMute, exec, pamixer --default-source -t
+bind = , XF86AudioMicMute, exec, pamixer --default-source -t && dunstify -h string:x-canonical-private-synchronous:m1c "Mic is $([[ $(pamixer --default-source --get-mute) == 'true' ]] && echo 'off' || echo 'on')"
 bind = , XF86AudioMute, exec, pamixer -t
 bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioPause, exec, playerctl play-pause
@@ -169,8 +169,6 @@ bind = , XF86AudioPrev, exec, playerctl previous
 # brightness
 bind = ,XF86MonBrightnessDown, exec, $scriptsDir/brightness-control.sh --dec
 bind = ,XF86MonBrightnessUp, exec, $scriptsDir/brightness-control.sh --inc
-
-bind = ,XF86AudioMicMute, exec, dunstify -h string:x-canonical-private-synchronous:m1c "Mic is $([[ $(pamixer --default-source --get-mute) == 'true' ]] && echo 'off' || echo 'on')"
 
 # bind = $mainMod, asciitilde, exec, kill -s 9 $(pidof nwg-drawer)
 bind = $mainMod CTRL, bracketleft, exec, dunstctl close-all
