--- a/dot_config/hypr/startup.conf
+++ b/dot_config/hypr/startup.conf
@@ -28,6 +28,7 @@ exec-once=cbatticon
 exec-once= hyprpm reload -n
 exec-once=[workspace 3 silent] zen-browser -P "Default (release)"
 exec-once=[workspace 1 silent] zen-browser -P work
+exec-once=[workspace 1 silent] zen-browser -P others
 exec-once = swaybg -m fill -i ~/Pictures/wallpapers/Wallpaper-Bank/wallpapers/Night_City.png #&& ~/.config/hypr/scripts/pywalswww.sh
 exec-once = [workspace magic] ~/.config/tmux/auto-attach.sh
 
