feat: configure monitor related keybinds revolving `ALT`

--- a/dot_config/hypr/keybinds.conf
+++ b/dot_config/hypr/keybinds.conf
@@ -75,16 +75,6 @@ bind = $mainMod CTRL, l, swapwindow, r
 bind = $mainMod CTRL, k, swapwindow, u
 bind = $mainMod CTRL, j, swapwindow, d
 
-# preselect split window
-bind = $mainMod ALT, left, layoutmsg, preselect l
-bind = $mainMod ALT, right, layoutmsg, preselect r
-bind = $mainMod ALT, up, layoutmsg, preselect u
-bind = $mainMod ALT, down, layoutmsg, preselect d
-bind = $mainMod ALT, h, layoutmsg, preselect l
-bind = $mainMod ALT, l, layoutmsg, preselect r
-bind = $mainMod ALT, k, layoutmsg, preselect u
-bind = $mainMod ALT, j, layoutmsg, preselect d
-
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -126,6 +116,12 @@ bind = $mainMod SHIFT ALT, u, movetoworkspace, 5
 bind = $mainMod SHIFT ALT, i, movetoworkspace, 6
 bind = $mainMod SHIFT ALT, o, movetoworkspace, 7
 bind = $mainMod SHIFT ALT, p, movetoworkspace, 8
+
+# monitor related keybinds
+bind = $mainMod ALT, h, movewindow, mon:l
+bind = $mainMod ALT, l, movewindow, mon:r
+bind = $mainMod CTRL ALT, h, movecurrentworkspacetomonitor, l
+bind = $mainMod CTRL ALT, l, movecurrentworkspacetomonitor, r
 
 
 # Example special workspace (scratchpad)
